--- a/JingFM-RoundEffect/en.lproj/MainStoryboard.storyboard
+++ b/JingFM-RoundEffect/en.lproj/MainStoryboard.storyboard
@@ -1916,6 +1916,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Iu5-v2-WEF"/>
+        <segue reference="yLP-jV-80h"/>
     </inferredMetricsTieBreakers>
 </document>
